--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -18,17 +18,23 @@ jobs:
         with:
           channel: 'stable'
 
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Enable iOS platform (generates Podfile)
+        run: |
+          # This creates the ios folder structure and Podfile if not present
+          flutter config --enable-ios
+          flutter create . --platforms=ios
+
       - name: Fix iOS 14.0 Deployment Target
         run: |
-          # Fix for workmanager_apple plugin requiring iOS 14.0+
           echo "Fixing iOS deployment target for workmanager_apple compatibility..."
           
           # Update Podfile to iOS 14.0
           if [ -f "ios/Podfile" ]; then
-            # Backup original
             cp ios/Podfile ios/Podfile.backup
             
-            # Update or add platform line
             if grep -q "platform :ios" ios/Podfile; then
               sed -i '' "s/platform :ios, '[0-9]*\.[0-9]*'/platform :ios, '14.0'/g" ios/Podfile
             else
@@ -44,19 +50,13 @@ jobs:
             sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9]*\.[0-9]*;/IPHONEOS_DEPLOYMENT_TARGET = 14.0;/g' ios/Runner.xcodeproj/project.pbxproj
             echo "✅ Xcode project updated"
           fi
-          
-          # Clean pods cache
-          rm -rf ios/Pods ios/Podfile.lock 2>/dev/null || true
 
       - name: Install CocoaPods
-        run: |
-          sudo gem install cocoapods
-          cd ios
-          pod install --repo-update
-          cd ..
+        run: sudo gem install cocoapods
 
-      - name: Get dependencies
-        run: flutter pub get
+      - name: Install iOS Pods
+        working-directory: ios
+        run: pod install --repo-update
 
       - name: Build iOS (No Codesign)
         run: flutter build ios --release --no-codesign
