--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,9 +91,9 @@ jobs:
         with:
           channel: 'stable'
       - run: flutter pub get
-      - name: Install MSIX package
-        run: dart pub global activate msix
-      - run: dart run msix:create
+      - run: flutter build windows --release
+      - name: Create MSIX
+        run: dart run msix:create
       - uses: actions/upload-artifact@v4
         with:
           name: windows-msix
