--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,8 +117,13 @@ msix_config:
   display_name: PharmaGarde
   publisher_display_name: Georges
   identity_name: com.example.pharmagarde
-  publisher: CN=Georges
+  publisher: CN=Georges, O=PharmaGarde, C=CM
   msix_version: 1.0.0.0
-  logo_path: assets/icon.png
+  # Commente logo_path si tu n'as pas l'icône
+  # logo_path: assets/icon.png
   capabilities: internetClient
   store: false
+  install_certificate: false
+  # Options additionnelles pour éviter les erreurs
+  certificate_path: NONE
+  certificate_password: NONE
